--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>彩云天气查询</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
@@ -16,7 +17,10 @@
             <button onclick="getWeather()">查询天气</button>
         </div>
         <div class="weather-card" id="weatherCard">
-            <div class="loading">加载中...</div>
+            <div class="loading-animation">
+                <div class="spinner"></div>
+                <div class="pulse"></div>
+            </div>
             <div class="weather-content" style="display: none;">
                 <h2 id="location">未知位置</h2>
                 <div class="main-info">
@@ -24,11 +28,29 @@
                     <div id="weatherIcon" class="weather-icon"></div>
                 </div>
                 <div class="details">
-                    <div><i class="fas fa-tint"></i> 降水概率: <span id="precip">--</span></div>
+                    <div><i class="fas fa-tint"></i> 湿度: <span id="humidity">--</span>%</div>
                     <div><i class="fas fa-smog"></i> 空气质量: <span id="aqi">--</span></div>
                     <div><i class="fas fa-wind"></i> 风速: <span id="wind">--</span></div>
                     <div><i class="fas fa-sun"></i> 紫外线: <span id="uv">--</span></div>
                 </div>
+                <div class="additional-info">
+                    <div class="info-box">
+                        <i class="fas fa-compass"></i>
+                        <span>风向：</span>
+                        <span id="windDirection">--</span>
+                    </div>
+                    <div class="info-box">
+                        <i class="fas fa-tachometer-alt"></i>
+                        <span>气压：</span>
+                        <span id="pressure">--</span>hPa
+                    </div>
+                    <div class="info-box">
+                        <i class="fas fa-eye"></i>
+                        <span>能见度：</span>
+                        <span id="visibility">--</span>
+                    </div>
+                </div>
+                <canvas id="temperatureChart"></canvas>
             </div>
             <div class="error" style="display: none;"></div>
         </div>
